# delibera

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backend-deploy.yml
alembic/versions/: 2f92ffe854a3_initial_schema.py  4b2c1b1a7c2d_set_condominium_status_default.py  7f4d1c6b9e0a_add_status_and_soft_delete.py  9c7a2b7f0e4a_add_user_status.py
api/: .env.example  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 1b0d4b81b5a4_add_qr_code_status.py
api/app/: main.py  models.py  seed.py
api/app/core/: config.py  database.py  dependencies.py  enums.py  exception_handlers.py  exceptions.py
api/tests/: conftest.py
api/tests/e2e/: test_assembly_flow.py
api/tests/integration/: test_checkin_router.py  test_csv_import.py  test_realtime_notifications.py  (+3 more)
app/: main.py
app/core/: config.py  database.py  dependencies.py  enums.py  tenancy.py
docs/: 01-visao-geral.md  02-decisoes-tecnicas.md  03-estrutura-repositorios.md  04-setup-ambiente.md  05-database-schema.md  06-backend-implementation.md  07-frontend-implementation.md  08-testing-strategy.md  09-deployment.md  10-roadmap-implementacao.md  PRD.md
plans/: backend-plano-inicial.md  backend-voting-status-by-token-plan.md  frontend-implementation-plan.md  monorepo-planejamento.md  qr-voting-url-dinamica-plan.md
tests/: conftest.py
tests/e2e/: test_assembly_flow.py
web/: .env.example  AGENTS.md  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: index.css  main.tsx
(+116 files in other folders)
